--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "grommet-icons": "^4.11.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-markdown": "^9.0.1",
     "react-router-dom": "^6.25.1",
     "react-scripts": "5.0.1",
     "react-spring": "^9.7.2",
